--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "react-sneakers",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "author": "Artur Rakhmatullin",
+  "license": "ISC",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
