--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "macro-css": "^1.0.5",
     "node-sass": "^4.14.1",
     "react": "^17.0.2",
+    "react-content-loader": "^6.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
