--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Artur Rakhmatullin",
   "license": "ISC",
   "private": true,
+  "homepage": "https://tsartsartsar.github.io//react-sneakers",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -22,7 +23,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
